Replacing o.e.equinox.ds bundle with org.apache.felix.scr    - update tycho to 1.3.0    - remove old jvm parameters
Signed-off-by: Ondrej Dockal <odockal@redhat.com>