@@ -2,8 +2,8 @@
 #set( $symbol_pound = '#' )
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
-#if ($reddeer_version == "2.4.0" )
-#set( $rd_repository = 'http://download.eclipse.org/reddeer/releases/2.4.0/' )
+#if ($reddeer_version == "2.5.0" )
+#set( $rd_repository = 'http://download.eclipse.org/reddeer/releases/2.5.0/' )
 #else
 #set ( $rd_repository = 'http://download.eclipse.org/reddeer/snapshots/' )
 #end
@@ -27,7 +27,7 @@
 		<java.version>1.8</java.version>
 		<maven.version>3.0</maven.version>
 		<tycho.version>${tycho_version}</tycho.version>
-		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
+		<tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
 		<surefire.timeout>1200</surefire.timeout>
 		<platformSystemProperties></platformSystemProperties>
 	</properties>
